implemented the UI for admin_browse_event

--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         <activity
             android:name=".EventCreation"
             android:exported="false" />
+        <activity
+            android:name=".AdminBrowseEventActivity"
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
