--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -15,18 +15,15 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-        </activity>
-
-        <!-- Modify this line to include AttendeesActivity as the main activity -->
-        <activity
-            android:name=".AttendeesActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Add this line to include AttendeesActivity -->
+        <activity android:name=".AttendeesActivity" />
 
     </application>
 
