implemented UI for event info and cleaned up the file

--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -14,9 +14,14 @@
         <activity
             android:name=".EventCreationActivity"
             android:exported="true" />
-
         <activity
-            android:name=".EventCreation"
+            android:name=".AttendeeBrowseEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AttendeeEventInfo"
+            android:exported="false" />
+        <activity
+            android:name=".AttendeeEventInfoSignUp"
             android:exported="false" />
         <activity
             android:name=".AdminBrowseEventActivity"
