--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         <activity
             android:name=".EventCreationActivity"
             android:exported="true" />
-
+        <activity
+            android:name=".EventBrowseActivity"
+            android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
