--- a/andriodApp/local.properties
+++ b/andriodApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 06 14:51:25 MST 2024
-sdk.dir=C\:\\Users\\omarf\\AppData\\Local\\Android\\Sdk
+#Fri Mar 08 11:31:01 MST 2024
+sdk.dir=/Users/aizaztahir/Library/Android/sdk
