--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:name=".ScanQRActivity"
             android:exported="true"/>
         <activity
+            android:name=".ShareQRActivity"
+            android:exported="true"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 
