implemented view event details on banner click

--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -20,10 +20,7 @@
             android:name=".EventCreationActivity"
             android:exported="true" />
         <activity
-            android:name=".AttendeeEventInfoActivity"
-            android:exported="true" />
-        <activity
-            android:name=".AttendeeEventInfoSignUpActivity"
+            android:name=".EventDetailsActivity"
             android:exported="true" />
         <activity
             android:name=".AdminBrowseEventActivity"
