minor changes to handle the UI

--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:name=".AdminBrowseEventActivity"
             android:exported="true" />
         <activity
+            android:name=".ImageBrowseActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ImageDeleteActivity"
+            android:exported="true" />
+        <activity
             android:name=".EventBrowseActivity"
             android:exported="true"/>
         <activity
