--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
         <activity
             android:name=".AttendeesActivity"
             android:exported="true" />
-
+        <activity android:name=".AdminDeleteEvent"
+            android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
