--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:name=".AdminBrowseEventActivity"
             android:exported="true" />
         <activity
+            android:name=".AdminDeleteEvent"
+            android:exported="true" />
+        <activity
             android:name=".ImageBrowseActivity"
             android:exported="true" />
         <activity
