--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
             android:name=".EventBrowseActivity"
             android:exported="true"/>
         <activity
+            android:name=".AdminBrowseProfilesActivity"
+            android:exported="true"/>
+        <activity
             android:name=".OrgSendNotificationActivity"
             android:exported="true"/>
         <activity
