added and integrated all the features for admin

--- a/andriodApp/app/src/main/AndroidManifest.xml
+++ b/andriodApp/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             android:name=".AdminBrowseEventActivity"
             android:exported="true" />
         <activity
+            android:name=".AdminBrowseProfilesActivity"
+            android:exported="true" />
+        <activity
             android:name=".AdminDeleteEvent"
             android:exported="true" />
         <activity
